k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auctionboss-service
  namespace: auctionboss
spec:
  selector:
    app: auctionboss
    component: web-collector
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
