k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auctionboss-ingress
  namespace: auctionboss
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: auctionboss.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auctionboss-service
                port:
                  number: 3000
